# roq-bitmex

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile.am  README.md  configure.ac  roq-bitmex.pc.in
benchmark/: .gitignore  Makefile.am
conda/: meta.yaml
docker/: Dockerfile  README.md
share/: config.toml
share/flags/prod/: flags.cfg
share/flags/test/: flags.cfg
src/roq/: CMakeLists.txt  Makefile.am
src/roq/bitmex/: .gitignore  CMakeLists.txt  Makefile.am  README.md  account.cpp  account.hpp  api.cpp  api.hpp  application.cpp  application.h  application.hpp  authenticator.cpp  authenticator.hpp  config.cpp  config.h  config.hpp  drop_copy.cpp  drop_copy.h  drop_copy.hpp  drop_copy_state.hpp  drop_copy_state.json  flags.cpp  flags.h  flags.hpp  flags.json  gateway.cpp  gateway.h  gateway.hpp  index.rst  live.sh  main.cpp  market_data.cpp  market_data.h  market_data.hpp  market_data_state.hpp  market_data_state.json  options.cpp  options.h  order_entry.cpp  order_entry.h  (+35 more)
src/roq/bitmex/api/: Makefile.am  enums.cpp  enums.h  utils.cpp  utils.h
src/roq/bitmex/config/: bitmex-prod.toml  bitmex-testnet.toml
src/roq/bitmex/fix_bridge/: .gitignore  application.cpp  application.hpp  config.cpp  config.hpp  live.sh  main.cpp  settings.cpp  settings.hpp
src/roq/bitmex/flags/: .gitignore  CMakeLists.txt  common.json  flags.json  misc.json  rest.json  settings.cpp  settings.hpp  ws.json
src/roq/bitmex/gateway/: CMakeLists.txt  account.cpp  account.hpp  api.cpp  api.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  drop_copy.cpp  drop_copy.hpp  market_data.cpp  market_data.hpp  order_entry.cpp  order_entry.hpp  order_update.cpp  order_update.hpp  price_cache.cpp  price_cache.hpp  product.cpp  product.hpp  settings.hpp  shared.cpp  shared.hpp  utils.hpp
src/roq/bitmex/issues/: 2022-04-28
src/roq/bitmex/json/: .gitignore  CMakeLists.txt  Makefile.am  account.cpp  account.h  accounts.cpp  accounts.h  action.cpp  action.h  action.json  activate.cpp  activate.h  autogen.sh  cancel_all_after.cpp  cancel_all_after.h  cancel_all_after.json  cancel_all_orders_ack.json  cancel_order_ack.json  change.cpp  change.h  currency.cpp  currency.h  done.cpp  done.h  encoder.cpp  encoder.hpp  error.cpp  error.h  error.json  error_parser.h  error_parser.hpp  error_response.json  exec_inst.json  exec_type.json  execution.cpp  execution.h  execution.json  execution_data_item.json  execution_item.cpp  execution_item.h  (+158 more)
src/roq/bitmex/protocol/json/: .gitignore  CMakeLists.txt  action.json  cancel_all_after.json  cancel_all_orders_ack.json  cancel_order_ack.json  encoder.cpp  encoder.hpp  error.json  error_parser.hpp  error_response.json  exec_inst.json  exec_type.json  execution.json  execution_data_item.json  field.json  funding.json  funding_data_item.json  instrument.json  instrument_data_item.json  liquidation.json  liquidation_data_item.json  liquidity_ind.json  map.cpp  map.hpp  margin.json  margin_data_item.json  message.json  multi_leg_reporting_type.json  op.json  ord_status.json  ord_type.json  order.json  order_book_l2.json  order_book_l2_data_item.json  order_data_item.json  parser.cpp  parser.hpp  position.json  position_data_item.json  (+20 more)
src/roq/bitmex/test/: CMakeLists.txt  json_error_response.cpp  json_instrument.cpp  json_position.cpp
src/roq/bitmex/tools/: crypto.cpp  crypto.hpp  hasher.cpp  hasher.h  hasher.hpp
test/: .gitignore  CMakeLists.txt  Makefile.am  json_cancel_all_orders_ack.cpp  json_cancel_order_ack.cpp  json_create_order_ack.cpp  json_error_response.cpp  json_execution.cpp  json_funding.cpp  json_instrument.cpp  json_liquidation.cpp  json_margin.cpp  json_modify_order_ack.cpp  json_order_book_l2.cpp  json_order_data_item.cpp  json_position.cpp  json_quote.cpp  json_settlement.cpp  json_subscribe.cpp  json_trade.cpp  json_welcome.cpp  parser_tester.hpp
